--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
 	<title>Hoja de vida Israel Carrión</title>
+	<meta charset="utf-8">
 </head>
 	<img height="80px" src="img/logo.svg">
 	<h1>Hoja de vida</h1>
@@ -9,7 +10,7 @@
 	<h3>Loja, 2 de abril de 1984</h3>
 	<nav>
 		<p>
-			<a href="index.html">Inicio</a> | <a href="hipervinculos/educacion.html">Educación </a> | <a href="hipervinculos/experiencia.htm">Experiencia </a>
+			<a href="index.html">Inicio</a> | <a href="hipervinculos/educacion.html">Educación </a> | <a href="hipervinculos/experiencia.html">Experiencia </a>
 		</p>
 	</nav>
 	<body>
